# libmks

./: .gitignore  .gitlab-ci.yml  .packit.yml  NEWS  README.md  libmks.doap  meson.build  meson.options  meson_options.txt  org.gnome.libmks.mks.json
doc/: Mks.toml.in  urlmap.js
docs/: Mks.toml.in  meson.build
lib/: dbus-display1.xml  libmks.h  meson.build  mks-audio-format.c  mks-audio-format.h  mks-cairo-framebuffer-private.h  mks-cairo-framebuffer.c  mks-chardev-private.h  mks-chardev-pty.c  mks-chardev.c  mks-chardev.h  mks-clipboard-private-base.h  mks-clipboard-private.h  mks-clipboard-redirector.c  mks-clipboard-redirector.h  mks-clipboard.c  mks-clipboard.h  mks-css-private.h  mks-css.c  mks-dbus-chardev-private.h  mks-dbus-chardev.c  mks-dbus-clipboard-private.h  mks-dbus-clipboard.c  mks-dbus-keyboard-private.h  mks-dbus-keyboard.c  mks-dbus-microphone-private.h  mks-dbus-microphone.c  mks-dbus-mouse-private.h  mks-dbus-mouse.c  mks-dbus-screen-private.h  mks-dbus-screen.c  mks-dbus-speaker-private.h  mks-dbus-speaker.c  mks-dbus-touchable-private.h  mks-dbus-touchable.c  mks-dbus-transport.c  mks-dbus-transport.h  mks-device-private.h  mks-device.c  mks-device.h  (+62 more)
tests/: unit-tests.c
testsuite/: meson.build  test-audio-format.c  test-mks-transport.c  test-mks.c
tools/: meson.build  mks-connect.c  mks.c
